Fixed jquery library issue

--- a/template/main/index.html
+++ b/template/main/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>URL Shortener</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <style>
     *,
     *::before,
@@ -20,7 +21,6 @@
     padding: 15px;
     font-family: 'Poppins', sans-serif;
     }
-
     body {
     min-height: 100vh;
     line-height: 2.5;
@@ -67,19 +67,25 @@
     #content {
         background: #000;
     }
+    h2 {
+        color: #fff;
+    }
     </style>
+
 </head>
 <body>
     <div class="header">
         <h1 style="text-align: center; color: #fff;">URL Shortener</h1>
         <form id="form">
-          {% csrf_token %}
+        {% csrf_token %}
         <input type="text" name="link" id="link" placeholder="Paste your URL here.">
         <div class="button">
           <button type="submit" id="short">Shorten</button>
         </div>
         </form>
-        <div id="content"><h2></h2></d>
+        <div id="content">
+            <h2></h2>
+        </div>
       </div>
       <script type="text/javascript">
         $(document).on('submit','#form', function(e){
@@ -97,6 +103,5 @@
             });
         });
       </script>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-</body>
+    </body>
 </html>
