--- a/template/main/index.html
+++ b/template/main/index.html
@@ -98,7 +98,7 @@
                     csrfmiddlewaretoken: $('input[name=csrfmiddlewaretoken]').val(),
                 },
                 success: function(data){
-                    $('h2').html("www.uttam.shr/"+data)
+                    $('h2').html("localhost:8000/"+data)
                 }
             });
         });
